--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -6,11 +6,12 @@
 
 body {
   font-family: sans-serif;
-
+  background-image: url(../images/xLZrFev.webp);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .pokedex {
@@ -70,5 +71,5 @@ button:hover {
 p {
   position: relative;
   top: 200px;
-  right: 80px;
+  right: 30px;
 }
